--- a/test.html
+++ b/test.html
@@ -294,11 +294,11 @@
         <h3>Pythagorean Theorem Calculator</h3>
         
         <!-- Select which side to calculate -->
-        <p>Select the known sides (a, b, or c):</p>
+        <p>Select which side to calculate: (a, b, or c)</p>
         <select id="pythagoreanSelect" onchange="changePythagoreanForm()">
-            <option value="a">Side a (Leg)</option>
-            <option value="b">Side b (Leg)</option>
-            <option value="c">Hypotenuse (c)</option>
+            <option value="c">Side C (hypotenuse)</option>
+            <option value="a">Side A</option>
+            <option value="b">Side B</option>
         </select>
 
         <!-- Form for calculating side 'a' -->
