--- a/test.html
+++ b/test.html
@@ -296,7 +296,7 @@
         <!-- Select which side to calculate -->
         <p>Select which side to calculate: (a, b, or c)</p>
         <select id="pythagoreanSelect" onchange="changePythagoreanForm()">
-            <option value="c">Side C (hypotenuse)</option>
+            <option value="c" selected>Side C (hypotenuse)</option>
             <option value="a">Side A</option>
             <option value="b">Side B</option>
         </select>
